--- a/style.css
+++ b/style.css
@@ -250,4 +250,8 @@ justify-content: center;
     align-items: center;
     padding: 15px 2%;
   }
+ .cima-content h1{
+    font-size: 90px;
+    font-weight: 39;
+  }
 }
